--- a/colorpicker.html
+++ b/colorpicker.html
@@ -256,22 +256,24 @@ var colorPicker = {
 /*
  * Redraw color square to reflect any change in parameters
  */
- drawCubeSlice: function () { // TODO: rewrite using technique described in http://bucephalus.org/text/CanvasHandbook/CanvasHandbook.html#examples-of-pixel-manipulation
-  const GRANULARITY = 51; // cheat for speed
+ drawCubeSlice: function () {
+  // see http://bucephalus.org/text/CanvasHandbook/CanvasHandbook.html#examples-of-pixel-manipulation
   var width = this.canvasElement.width;
   var height = this.canvasElement.height;
   this.setTriadComplex();
-  var dx = width/GRANULARITY;
-  var dy = height/GRANULARITY;
   var context = this.canvasElement.getContext("2d");
-  for (var x = 0; x < width; x+=dx) {
-   for (var y = 0; y < height; y+=dy) {
-    context.beginPath();
-    context.rect(x, y, dx, dy);
-    context.fillStyle = this.colorSpec(x, y);
-    context.fill();
-   }
-  }
+  var imDat = context.createImageData(width, height);
+  var i = 0;
+  for (var y = 0; y < height; y++) {
+    for (var x = 0; x < width; x++) {
+      context.fillStyle = this.colorSpec(x, y);
+      imDat.data[i++] = parseInt(context.fillStyle.substring(1, 3), 16);
+      imDat.data[i++] = parseInt(context.fillStyle.substring(3, 5), 16);
+      imDat.data[i++] = parseInt(context.fillStyle.substring(5, 7), 16);
+      imDat.data[i++] = 255;      // the Alpha/transparency of (x,y), which is constant 255, i.e. fully visible
+    };
+  };
+  context.putImageData (imDat, 0, 0);
  },
 
 /*
